--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ diesel = { version = "2.0.2", features = ["postgres"] }
 futures = "0.3.25"
 tokio = { version = "1.23.0", features = ["full"] }
 ethers = { version = "1.0.2", features = ["ws", "rustls"] }
+bigdecimal = "0.3.0"
