--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ futures = "0.3.25"
 tokio = { version = "1.23.0", features = ["full"] }
 ethers = { version = "1.0.2", features = ["ws", "rustls"] }
 bigdecimal = "0.3.0"
+num_cpus = "1.15.0"
