Updated DB path

--- a/.env.test
+++ b/.env.test
@@ -1,2 +1,2 @@
-DATABASE_URL="postgres://postgres:postgres@localhost"
+DATABASE_URL="postgres://postgres:postgres@localhost/eth-db"
 WSS_NODE="ws://localhost:8546"
